ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([WithComponent("ecsdb::Test"), EntityId(42)]).sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithComponent(\"ecsdb::Test\"), EntityId(42)]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select entity from components where (component = :1 and entity = :2)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":2",
            Integer(
                42,
            ),
        ),
    ],
}
