ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@And([WithoutComponent("ecsdb::C"), WithComponentData("ecsdb::B", Integer(7))]).simplify().sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: "And([WithoutComponent(\"ecsdb::C\"), WithComponentData(\"ecsdb::B\", Integer(7))]).simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select entity from components where (component = :1 and data = :2 and (select true from components c2 where c2.entity = components.entity and c2.component = :3) is null)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::B",
            ),
        ),
        (
            ":2",
            Integer(
                7,
            ),
        ),
        (
            ":3",
            Text(
                "ecsdb::C",
            ),
        ),
    ],
}
