ecsdb/src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@EntityId(42).sql_query().snap
---
source: ecsdb/src/query/ir.rs
description: EntityId(42).sql_query()
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where entity = ?1",
    placeholders: [
        (
            "?1",
            Integer(
                42,
            ),
        ),
    ],
}
